--- a/review-service/src/main/resources/application.properties
+++ b/review-service/src/main/resources/application.properties
@@ -1,8 +1,13 @@
+server.port=8081
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-
+spring.datasource.data=classpath:db/data.sql
+#spring.datasource.schema=classpath:db/schema.sql
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.continue-on-error=true
+#spring.batch.initialize-schema=always
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.initialization-mode=always
