--- a/review-service/src/main/resources/application.properties
+++ b/review-service/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.datasource.initialization-mode=always
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 spring.application.name=review-service
+
+foo.ribbon.listOfServers: localhost:9090
