--- a/review-service/src/main/resources/application.properties
+++ b/review-service/src/main/resources/application.properties
@@ -16,3 +16,4 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 spring.application.name=review-service
 
 foo.ribbon.listOfServers: localhost:9090
+feign.hystrix.enabled=true
